# STARKNET-HACKATHON

./: .dockerignore  PowerShell devkit 80%  README.md  render.yaml  starknet_bridge_contract.rs
.github/workflows/: rust-clippy.yml
ADMIN SERVICES/: admin-service.ts
API GATEWAY SERVICES/: api-gateway.ts  api_gateway.ts
BRIDGE SERVICES/: btc_bridge_service.ts
CAIRO BUILDS/: btc_bridge_cairo.rs  commitment_cairo.rs  lib_cairo.rs  merkle_tree_cairo.rs  privacy_pool_cairo.rs  proof_verifier_cairo (2).rs
CLIENT PROOF GEN SERVICES/: client_proof_generator.ts
CLIENT PROVER SERVICES/: circuit_prover_service.ts
ENCRRYPTION SERVICES/: encryption_service.ts
FINAL_RWA_2026/FINAL_RWA_2026/: LICENSE  README.md  index.ts  package.json
MARKET DATA SERVICES/: market-data-service.ts
NOIR CIRCUITS/: noir_range_circuit.rs  noir_spend_circuit.rs  noir_swap_circuit.rs
NOTE SERVICES/: note_service.ts
ORDER SERVICES/: order-service.ts
POSEIDON SERVICES/: poseidon_service.ts
POSITION SERVICES/: position-service.ts
RISK SERVICES/: risk-service.ts
RUST SERVICES MODULES/: Cargo.toml  MANIFEST.md  PROJECT_STATUS.md  README.md  START_HERE.md  bitcoin-service.rs  build.sh  docker-compose.yml  ethereum-service.rs  main.rs  price-service.rs  solana-service.rs  zcash-service.rs
RUST SERVICES MODULES/mnt/user-data/outputs/crypto-microservices-rust/ethereum-service/: Cargo.toml
STARCLAD MY SWAP/: ALL_MODULES_COMPLETE.sh  COMPLETE_PROJECT_SUMMARY.md  COMPLETION_STATUS.md  DEPLOYMENT.md  Dockerfile  FRONTEND_COMPLETE.md  Nargo.toml  PRODUCTION_UPDATE_STATUS.md  PROJECT_OVERVIEW.md  README.md  Scarb.toml  app.js  atomic-swap.ts  bitcoin-bridge.ts  btc_bridge.cairo  build.sh  deploy.sh  docker-compose.yml  encryption.ts  index.ts  merkle_tree.nr  note-manager.test.ts  note-manager.ts  package.json  poseidon.ts  server-middleware.ts  server.ts  starclad-ULTIMATE.html  starknet-contract.ts  styles.css  swap_contract.cairo  tsconfig.json
STARCLAD MY SWAP/STARKNET EIP AKA SIP/: helpers.js  snip12.js  snip6.js  snip9.js  walletConnection.js
STARCLAD MY SWAP/starkenethackathonv2/: CONTRACTS_CIRCUITS_README.md  CONTRACTS_CIRCUITS_SUMMARY.md  DELIVERY_SUMMARY.md  PRODUCTION_FIXED.md  PRODUCTION_README.md  atomic_swap.py  compile_circuits.sh  semaphore.circom  semaphore.py  semaphore_contract.cairo  sigma_verifier.cairo  test_semaphore.js  test_sigma.py  tongo_app.py  tongo_contract.cairo  tongo_poe.circom  tongo_range_proof.circom  vault_curator.py
STARCLAD MY SWAP/starknet swaps and privacy 93 percent done/: API_DOCS.md  CERTIFICATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  INVENTORY.md  PRODUCTION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  Scarb.toml  deploy.sh  docker-compose.yml  nginx.conf  package.json  private_btc_swap.cairo  semaphore_starknet.cairo  server.js  setup.sh  test-integration.sh  test_vault.cairo  vault_manager.cairo
STARKNET SERVICES/: starknet_service.ts
SWAP SERVICES/: swap_coordinator_service.ts
USER SERVICES/: user-service.ts
rwa privacy v2/: Dockerfile  Nargo.toml  QUICKSTART.md  README.md  Scarb.toml  alphavantage.ts  base-fetcher.ts  coingecko.ts  compile.sh  config.ts  deploy-contract.ts  deploy.sh  deposit.nr  ecosystem.config.cjs  event-listener.ts  fred.ts  index.html  index.ts  input-examples.json  lib.cairo  logger.ts  merkle.ts  oracle-abi.ts  oracle-scheduler.ts  oracle.cairo  package.json  price-aggregator.ts  retry.ts  setup.sh  starknet-poster.ts  test-proofs.sh  test.ts  tsconfig.json  types.ts  withdraw.nr
rwa-oracle-privacy/rwa-merged/: Dockerfile  Makefile  docker-compose.yml  package.json  tsconfig.json
rwa-protocol/: Dockerfile  README.md  render.yaml
rwa-protocol/cairo/: Scarb.toml
token scanners v2 rust and js/: Cargo.toml  README.md  package.json  token-scanner-service.rs
transaction  and token services v2/: Cargo.toml  ENHANCEMENTS-TX.md  ENHANCEMENTS.md  README.md  package.json  token-scanner-service-enhanced.js  transaction-manager-service-enhanced.js  transaction-manager-service.rs
(+151 files in other folders)
