[package]
name = "token-scanner-service"
version = "2.0.0"
edition = "2021"
authors = ["Leon Sage <leon@sageaudio.com>"]
description = "Enhanced token scanner microservice for blockchain token detection"
license = "Proprietary"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "2.0"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"
hex = "0.4"
lazy_static = "1.4"
chrono = "0.4"
dashmap = "5.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
