[package]
name = "ethereum-service"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "decimal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
sha3 = "0.10"
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
aes-gcm = "0.10"
rand = "0.8"
ethers = { version = "2.0", features = ["legacy", "ws"] }
rust_decimal = "1.36"

[dev-dependencies]
mockall = "0.13"
